feat：实现 Java代码原生执行